tests/snapshots/snapshots__insert_slash_menu_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#1d8f1d bg=#041204 mod=bold} FILTERS{/}{fg=#33ff33 bg=#041204}                  {/}{bg=#041204} {/}{fg=#66ff66 bg=#041204}▶{/}{fg=#aaffaa bg=#041204}▮{/}{fg=#66ff66 bg=#041204}◀{/}{bg=#041204} {/}{fg=#33ff33 bg=#041204 mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#1d8f1d bg=#041204}  •  15 tas{/}{fg=#1d8f1d bg=#041204 mod=bold} DETAIL{/}{fg=#33ff33 bg=#041204}                           {/}
{fg=#33ff33 bg=#041204}                          {/}{bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#66ff66 bg=#041204 mod=bold} PROJECTS{/}{fg=#33ff33 bg=#041204}                 {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(2){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#aaffaa bg=#020a02 mod=bold}PRIORITY A{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#1d8f1d bg=#041204} priority  {/}{fg=#aaffaa bg=#041204 mod=bold}(A){/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +work           {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#020a02 bg=#33ff33}  1 {/}{fg=#020a02 bg=#33ff33 mod=bold}▸ (A) {/}{fg=#020a02 bg=#33ff33}Finish Q2 board deck +work @la{/}{fg=#1d8f1d bg=#041204} created   {/}{fg=#33ff33 bg=#041204}2026-05-01             {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +health         {/}{fg=#1d8f1d bg=#041204}  3{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  2 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#aaffaa bg=#020a02 mod=bold}(A) {/}{fg=#33ff33 bg=#020a02}Call dentist to reschedule cle{/}{fg=#1d8f1d bg=#041204} due       {/}{fg=#33ff33 bg=#041204}2026-05-06  {/}{fg=#ccffcc bg=#041204}today{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +finance        {/}{fg=#1d8f1d bg=#041204}  2{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(3){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}PRIORITY B{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#1d8f1d bg=#041204} projects  {/}{fg=#66ff66 bg=#041204}+work{/}{fg=#33ff33 bg=#041204}                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +home           {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  3 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}(B) {/}{fg=#33ff33 bg=#020a02}Review pull requests for auth {/}{fg=#1d8f1d bg=#041204} contexts  {/}{fg=#2adf2a bg=#041204}@laptop{/}{fg=#33ff33 bg=#041204}                {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +learning       {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  4 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}(B) {/}{fg=#33ff33 bg=#020a02}Renew passport before summer t{/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +personal       {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  5 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}(B) {/}{fg=#33ff33 bg=#020a02}Draft hiring rubric for senior{/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +travel         {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(2){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#44ff44 bg=#020a02 mod=bold}PRIORITY C{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#1d8f1d bg=#020a02}  6 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#44ff44 bg=#020a02 mod=bold}(C) {/}{fg=#33ff33 bg=#020a02}Pay quarterly estimated taxes {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#2adf2a bg=#041204 mod=bold} CONTEXTS{/}{fg=#33ff33 bg=#041204}                 {/}{fg=#1d8f1d bg=#020a02}  7 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#44ff44 bg=#020a02 mod=bold}(C) {/}{fg=#33ff33 bg=#020a02}Order new running shoes {/}{fg=#66ff66 bg=#020a02}+healt{/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@errands        {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(8){/}{fg=#0f3f0f bg=#041204}┌{/}{fg=#66ff66 bg=#041204 mod=bold} ADD TASK {/}{fg=#0f3f0f bg=#041204}────────────────────────────┐{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@home           {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  8 {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}                                      {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@laptop         {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  9 {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#66ff66 bg=#041204 mod=bold}› {/}{fg=#33ff33 bg=#041204}edule team offsite {/}{fg=#66ff66 bg=#041204}+work{/}{fg=#33ff33 bg=#041204} {/}{fg=#2adf2a bg=#041204}@phone{/}{fg=#33ff33 bg=#041204} /█{/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@phone          {/}{fg=#1d8f1d bg=#041204}  3{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02} 10 {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#1d8f1d bg=#041204}ok · 1 +{/}{fg=#66ff66 bg=#041204}project {/}{fg=#1d8f1d bg=#041204}1 @{/}{fg=#2adf2a bg=#041204}context{/}{bg=#041204}          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#1d8f1d bg=#020a02} 11 {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}                                      {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#1d8f1d bg=#020a02} 12 {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#1d8f1d bg=#041204}format: {/}{fg=#aaffaa bg=#041204 mod=bold}(A) {/}{fg=#33ff33 bg=#041204}Buy milk {/}{fg=#66ff66 bg=#041204}+shop {/}{fg=#2adf2a bg=#041204}@home {/}{fg=#77ff77 bg=#041204}due{/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#1d8f1d bg=#020a02} 13 {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}                                      {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#1d8f1d bg=#020a02} 14 {/}{fg=#0f3f0f bg=#041204}└──────────────────────────────────────┘{/}{fg=#33ff33 bg=#041204}                              {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#1d8f1d bg=#020a02} 15 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#041204}┌──────────────────────────────────────────────────────────┐{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204} {/}{fg=#1d8f1d bg=#041204 mod=bold}ATTACH METADATA{/}{bg=#041204}                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#33ff33}  {/}{fg=#33ff33 bg=#33ff33 mod=bold}Due date    {/}{fg=#1d8f1d bg=#33ff33}when this needs doing    {/}{bg=#33ff33}              {/}{fg=#1d8f1d bg=#33ff33}/due{/}{bg=#33ff33} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}Recurrence  {/}{fg=#1d8f1d bg=#041204}repeat after completing  {/}{bg=#041204}              {/}{fg=#1d8f1d bg=#041204}/rec{/}{bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}Threshold   {/}{fg=#1d8f1d bg=#041204}hide until this date     {/}{bg=#041204}                {/}{fg=#1d8f1d bg=#041204}/t{/}{bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}Priority    {/}{fg=#1d8f1d bg=#041204}A · B · C                {/}{bg=#041204}             {/}{fg=#1d8f1d bg=#041204}/prio{/}{bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}+ Project   {/}{fg=#1d8f1d bg=#041204}attach to a project      {/}{bg=#041204}             {/}{fg=#1d8f1d bg=#041204}/proj{/}{bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}@ Context   {/}{fg=#1d8f1d bg=#041204}tool, place or person    {/}{bg=#041204}              {/}{fg=#1d8f1d bg=#041204}/ctx{/}{bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}│{/}{bg=#041204}  {/}{fg=#1d8f1d bg=#041204 mod=bold}↑↓{/}{fg=#1d8f1d bg=#041204} pick · {/}{fg=#1d8f1d bg=#041204 mod=bold}Enter{/}{fg=#1d8f1d bg=#041204} insert · {/}{fg=#1d8f1d bg=#041204 mod=bold}Esc{/}{fg=#1d8f1d bg=#041204} dismiss · type to filter{/}{bg=#041204}   {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}        {/}{fg=#0f3f0f bg=#041204}└──────────────────────────────────────────────────────────┘{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#020a02 bg=#33ff33 mod=bold} INSERT {/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}Enter save · Esc normal{/}{bg=#041204}                     {/}{fg=#1d8f1d bg=#041204}15 open · 2026-05-06 · tuxedo 2026.7.1-prumo2 {/}
